fix: Break unbreakable words to prevent overflow

--- a/public/css/lorekeeper.css
+++ b/public/css/lorekeeper.css
@@ -85,6 +85,7 @@ main {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    word-wrap: break-word;
 }
 
 main > .row {
